tests/transpiler/x/pl/values_builtin.out
ERROR: /workspace/mochi/tests/transpiler/x/pl/values_builtin.pl:2: Initialization goal raised exception:
ERROR: main/0: Unknown procedure: values/2
